--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+<!DOCTYPE html>  <!-- #Documento tipo HTML -->
+<html lang="pt-BR"> <!-- Define a linguagem principal do documento -->
+<head> <!--Parte não exibida do documento -->
+    <meta charset="UTF-8"> <!-- Representa qualquer caractere de qualquer idioma. -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Escolhe a versão do Internet Explorer pra renderizar a página, no caso, Edge. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Como o site é exibido em um dispositivo móvel -->
+    <title>Eduardo Schmitt</title> <!-- Titulo do site -->
+    <link href="style.css" rel="stylesheet"> <!-- Puxa o arquivo .css -->
 </head>
+
 <body>
-    <h3>Hello World!</h3>
-    <h2>Meu nome é Duh Krl!</h2>
+    <h2>Meu nome é Eduardo Schmitt!</h2>
+    <img src="images/eu.JPG" width="150px">
+    <p>Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
+
+    <table>
+        <tr>
+            <td><img  width="75" height="100" src="images/ifc.png"/></td>   
+            <td>Instituto Federal Catarinense Curso Técnico Integrado Informática 2018 – 2021 (Término em 2021 em razão da pandemia) Atividades e grupos: Bolsista Projeto Fênix</td>
+        </tr>
+        <tr>
+            <td><img  width="75" height="100" src="images/uffs.jpg"/></td>
+            <td>Cursando Ciências da Computação na UFFS</td>  
+        </tr>
+    </table>
+
+    <h3>O que estou aprendendo atualmente:</h3>
+    <img src="images/psd.svg" width="70px">
+    <img src="images/python.svg" width="70px">
+    <img src="images/git.svg" width="70px">
+    <img src="images/linux.svg" width="70px">
+
 </body>
 </html>
