--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-    <h2>Meu nome é Eduardo Schmitt!</h2>
-    <img src="images/eu.JPG" width="150px">
-    <p>Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
+    <h1 align="center">Eduardo Schmitt Carniel</h1>
+    <p align="center">Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
 
-    <table>
+    <table  align="center">
         <tr>
             <td><img  width="75" height="100" src="images/ifc.png"/></td>   
             <td>Instituto Federal Catarinense Curso Técnico Integrado Informática 2018 – 2021 (Término em 2021 em razão da pandemia) Atividades e grupos: Bolsista Projeto Fênix</td>
@@ -22,13 +21,37 @@
             <td><img  width="75" height="100" src="images/uffs.jpg"/></td>
             <td>Cursando Ciências da Computação na UFFS</td>  
         </tr>
+        <tr>
+            <td></td>
+        </tr>
     </table>
 
-    <h3>O que estou aprendendo atualmente:</h3>
-    <img src="images/psd.svg" width="70px">
-    <img src="images/python.svg" width="70px">
-    <img src="images/git.svg" width="70px">
-    <img src="images/linux.svg" width="70px">
+    <div align="center">
+        <p>O que estou aprendendo atualmente:</p>
+        <img src="images/psd.svg" width="70px">
+        <img src="images/python.svg" width="70px">
+        <img src="images/git.svg" width="70px">
+        <img src="images/linux.svg" width="70px">
+    </div>
 
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div align="center">
+        <img src="images/eu.JPG" width="150px"> 
+    </div>
+
+    <br>
+
+    <table align="center">
+        <tr>
+            <td><img  width="25" height="25" src="images/linkedin.png"/></td>
+            <td>www.linkedin.com/in/eduardocarniel</td>
+            <td>&nbsp</td>
+            <td><img  width="25" height="25" src="images/git.png"/></td>
+            <td>https://github.com/eduardoschmitt</td>
+            <td>&nbsp</td>
+        </tr>
+    </table>
+    <p align = "center">© 2021 Eduardo Schmitt</p>
 </body>
 </html>
