--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-    <h1 align="center">Eduardo Schmitt Carniel</h1>
-    <p align="center">Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
+    <div align="center">
+        <h1>Eduardo Schmitt Carniel</h1>
+        <p>Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
+        <p>Entusiasta da computação, com experiência em Photoshop e edição de vídeos.</p>
+    </div>
 
     <table  align="center">
         <tr>
             <td><img  width="75" height="100" src="images/ifc.png"/></td>   
-            <td>Instituto Federal Catarinense Curso Técnico Integrado Informática 2018 – 2021 (Término em 2021 em razão da pandemia) Atividades e grupos: Bolsista Projeto Fênix</td>
+            <td>Instituto Federal Catarinense / Curso Técnico Integrado Informática / 2018 – 2021 (Término em 2021 em razão da pandemia) / Atividades e grupos: Bolsista Projeto Fênix</td>
         </tr>
         <tr>
             <td><img  width="75" height="100" src="images/uffs.jpg"/></td>
@@ -34,10 +37,9 @@
         <img src="images/linux.svg" width="70px">
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    <br><br><br><br><br><br><br><br><br><br><br><br>
     <div align="center">
-        <img src="images/eu.JPG" width="150px"> 
+        <img src="images/eduardo.JPG" width="150px"> 
     </div>
 
     <br>
@@ -45,10 +47,10 @@
     <table align="center">
         <tr>
             <td><img  width="25" height="25" src="images/linkedin.png"/></td>
-            <td>www.linkedin.com/in/eduardocarniel</td>
+            <td><a href="www.linkedin.com/in/eduardocarniel">www.linkedin.com/in/eduardocarniel</a></td>
             <td>&nbsp</td>
             <td><img  width="25" height="25" src="images/git.png"/></td>
-            <td>https://github.com/eduardoschmitt</td>
+            <td><a href="https://github.com/eduardoschmitt">https://github.com/eduardoschmitt</a></td>
             <td>&nbsp</td>
         </tr>
     </table>
