--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 
 <body>
-    <div align="center">
+    <div align="center"> <!-- Organizar o nome e a biografia -->
         <h1>Eduardo Schmitt Carniel</h1>
-        <p>Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio. Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul.</p>
+        <p>🇧🇷 Técnico em Informática pelo Instituto Federal Catarinense Campus Avançado Sombrio (IFC-CAS). Cursando Ciências da Computação pela Universidade Federal da Fronteira Sul (UFFS).</p>
         <p>Entusiasta da computação, com experiência em Photoshop e edição de vídeos.</p>
+        <p>🇺🇸 Computer Technician at Instituto Federal Catarinense Campus Avançado Sombrio (IFC-CAS). Studying Computer Science at the Universidade Federal Fronteira Sul (UFFS).</p>
+        <p>Computer enthusiast, with experience in Photoshop and video editing.</p>
     </div>
 
-    <table  align="center">
-        <tr>
-            <td><img  width="75" height="100" src="images/ifc.png"/></td>   
-            <td>Instituto Federal Catarinense / Curso Técnico Integrado Informática / 2018 – 2021 (Término em 2021 em razão da pandemia) / Atividades e grupos: Bolsista Projeto Fênix</td>
+    <br> <!-- Quebra de linha -->
+
+    <table  align="center"> <!-- Tabela de cursos -->
+        <tr> <!-- Divisão em linhas da tabela -->
+            <td><img  width="75" height="100" src="images/ifc.png"/></td> <!-- Dados das tabelas -->
+            <td>Instituto Federal Catarinense / Técnico em Informática Integrado ao Ensino Médio / 2018 – 2021 (Término em 2021 em razão da pandemia) / Atividades e grupos: Bolsista Projeto Fênix</td>
         </tr>
         <tr>
             <td><img  width="75" height="100" src="images/uffs.jpg"/></td>
@@ -29,22 +33,24 @@
         </tr>
     </table>
 
-    <div align="center">
-        <p>O que estou aprendendo atualmente:</p>
+    <div align="center"> <!-- Organizar o que estou aprendendo-->
+        <p>🇧🇷 O que estou aprendendo atualmente:</p>
+        <p>🇺🇸 What I'm currently learning:</p>
         <img src="images/psd.svg" width="70px">
         <img src="images/python.svg" width="70px">
         <img src="images/git.svg" width="70px">
         <img src="images/linux.svg" width="70px">
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br> <!-- Espaçamento para o rodapé -->
+
     <div align="center">
         <img src="images/eduardo.JPG" width="150px"> 
     </div>
 
     <br>
 
-    <table align="center">
+    <table align="center"> <!-- Rodapé -->
         <tr>
             <td><img  width="25" height="25" src="images/linkedin.png"/></td>
             <td><a href="www.linkedin.com/in/eduardocarniel">www.linkedin.com/in/eduardocarniel</a></td>
