--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <table align="center"> <!-- Rodapé -->
         <tr>
             <td><img  width="25" height="25" src="images/linkedin.png"/></td>
-            <td><a href="www.linkedin.com/in/eduardocarniel">www.linkedin.com/in/eduardocarniel</a></td>
+            <td><a href="https://www.linkedin.com/in/eduardocarniel">https://www.linkedin.com/in/eduardocarniel</a></td>
             <td>&nbsp</td>
             <td><img  width="25" height="25" src="images/git.png"/></td>
             <td><a href="https://github.com/eduardoschmitt">https://github.com/eduardoschmitt</a></td>
